CS-5700 - Playlist is not showing correct section for multi-language issues
fix pagination css

fix new playlist save

added validation messages to inputs

--- a/newscoop/src/Newscoop/NewscoopBundle/Resources/public/css/playlists.css
+++ b/newscoop/src/Newscoop/NewscoopBundle/Resources/public/css/playlists.css
@@ -74,6 +74,9 @@
 .context-item-summary {
     color: #007fb3;
 }
+.context-search {
+    overflow-y: scroll;
+}
 .context-search .context-item {
     border-bottom: none;
 }
@@ -211,7 +214,6 @@ ul#context_list {
 }
 .ng-table-pager {
     margin: 0 auto;
-    width: 65%;
     margin-top: -20px;
 }
 .ui-datepicker-trigger {
@@ -283,6 +285,11 @@ ul#context_list {
     border-right: 1px solid #ccc;
     padding-right: 20px;
     margin-right: 14px;
+}
+.error-custom {
+    line-height: 26px;
+    padding-left: 10px;
+    color: #a94442;
 }
 
 
